--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=1000">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Chocco</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -41,11 +41,16 @@
                 </li>
               </ul>
             </nav>
-            <a href="tel:+78009039090" class="phone-number">
+            <a href="tel:+78009039090" class="phone-number header__phone-number">
               <span class="phone-number__icon">
                 <img src="./img/icons/phone.svg" class="phone-number__icon-elem" alt="phone icon">
               </span>
               <span class="phone-number__text">8 800 903 90 90 </span>
+            </a>
+            <a href="" class="hamburger">
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
             </a>
           </header>
           <div class="hero__title-section">
@@ -233,19 +238,19 @@
               </div>
               <div class="form__controls">
                 <label class="radio">
-                  <input type="radio" name="option" class="radio__elem">
+                  <input type="radio" name="option" class="visually-hidden radio__elem">
                   <div class="radio__visible"></div>
                   <div class="radio__title">Потребуется сдача</div>
                 </label>
                 <label class="radio">
-                  <input type="radio" name="option" class="radio__elem">
+                  <input type="radio" name="option" class="visually-hidden radio__elem">
                   <div class="radio__visible"></div>
                   <div class="radio__title">Оплата по карте</div>
                 </label>
               </div>
               <div class="form__controls">
                 <label class="radio radio--checkbox">
-                  <input type="checkbox" class="radio__elem">
+                  <input type="checkbox" class="visually-hidden radio__elem">
                   <div class="radio__visible"></div>
                   <div class="radio__title">Не перезванивать</div>
                 </label>
